--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  url_launcher: ^6.1.6
+  share_plus: ^6.2.0
   get: ^4.6.5
   sqflite: ^2.2.0+3
   path_provider: ^2.0.11
